--- a/www/css/index.css
+++ b/www/css/index.css
@@ -114,8 +114,52 @@ h1 {
     -webkit-animation:fade 3000ms infinite;
 }
 
-#map { 
-    width: 100%;
-    height: 580px;
-    box-shadow: 5px 5px 5px #888;
+#mapaTab {
+    height: calc(100vh - 80px);
+}
+
+#listaTab {
+    overflow-y: auto;
+    height: calc(100vh - 80px);
+}
+
+#mapContainer { 
+    height: 100%;
  }
+
+#listadoNotificaciones {
+    background-color: #DDD;
+}
+
+#listadoNotificaciones > li > a {
+    border: none;
+    text-shadow: none !important;
+    color: #494949;
+}
+
+#listadoNotificaciones > li {
+    margin-bottom: .4em;
+}
+
+.tabElement {
+    text-shadow: none;
+}
+
+#tabs {
+    overflow: hidden;
+    border-radius: 0px;
+}
+
+#tabs > div {
+    border-bottom: 1px solid #e0565b;
+}
+
+.tabElement > a {
+    border: none;
+    color: #DEDEDE !important;
+    text-shadow: none !important;
+}
+
+#mainScreen {
+    overflow: hidden !important;
+}
